# deptrast

./: .gitignore  CLEANUP_PLAN.md  CLEANUP_PROGRESS.md  DEMO.md  INTEGRATION-PLAN.md  PUBLISHING-QUICKSTART.md  PUBLISHING.md  README-viz.md  README.md  SBOMS.md  SECURITY.md  dependency-tree.dot  index.html  libraries.sbom  manifest.json  mobile.html  petclinic-deptrast-from-maven.sbom  petclinic.sbom  pom.xml  sbom-viz.html  sw.js  update-packages.sh  x.sbom  y.sbom
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: build.yml  dependency-check.yml  release.yml
docs/: SECURITY-SETUP.md  herodevs-version-handling.md
python/: IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt
python/deptrast/: __init__.py  __main__.py  api_client.py  formatters.py  graph_builder.py  models.py  parsers.py  ssl_config.py  version_parser.py
python/deptrast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/deptrast/commands/: __init__.py  compare.py  graph.py  stats.py  validate.py
python/deptrast/pymaven/: client.py  utils.py
python/tests/: __init__.py  test_api_integration.py  test_deptrast.py  test_version_parser.py
scripts/: compare-sboms.py  generate-cdxgen-gold.sh  validate-sbom.sh  visualize-sbom.sh
src/main/resources/: logback.xml
src/test/resources/: petclinic-cdxgen.sbom  petclinic-contrast-enriched.sbom  petclinic-contrast.sbom  petclinic-pom.xml  petclinic-runtime-tree.txt
test-data/: deps.txt  petclinic-deptrast-from-maven.sbom  petclinic-runtime-tree.txt  spring-deps.txt
(+24 files in other folders)
